WPB-17187: stopping automatic redirection

--- a/.overrides/404.html
+++ b/.overrides/404.html
@@ -8,7 +8,7 @@
       The page you're looking for may have moved under a versioned path.
     </p>
     <p>
-      You’ll be automatically redirected to the latest version of this page, if it exists.
+      Please update the bookmarks or the reference to these pages to the following link if, the new location exists.
     </p>
     <p>
       👉 <a id="redirect-link" href="/latest/">Redirect to /latest/...</a>
@@ -26,7 +26,7 @@
         const link = document.getElementById("redirect-link");
         link.href = newPath;
         link.textContent = newPath; // Set both href and visible text
-        window.location.replace(newPath);
+        //window.location.replace(newPath);
       }
     })();
   </script>
