--- a/.overrides/404.html
+++ b/.overrides/404.html
@@ -8,7 +8,7 @@
       The page you're looking for may have moved under a versioned path.
     </p>
     <p>
-      Please update the bookmarks or the reference to these pages to the following link if, the new location exists.
+      Please update your bookmarks or references to these pages to the following link if the new location exists. If the page is no longer available, it is possible that it has been moved. Try searching the entire documentation to find the new location.
     </p>
     <p>
       👉 <a id="redirect-link" href="/latest/">Redirect to /latest/...</a>
